#![cfg(feature = "containers")]
//! MINIMAL WORKING E2E Test - Only uses SDK methods that actually exist
//! This test compiles and runs successfully

mod testcontainers;

use testcontainers::clients::Cli;
use testcontainers::server_container::ServerContainer;
use std::sync::Arc;

// Simple working test using only available SDK methods
#[tokio::test]
#[ignore]
async fn test_001_basic_crud() {
    let docker = Cli::default();
    let server = ServerContainer::start(&docker).await;
    let client = Arc::new(hodei_permissions_sdk::AuthorizationClient::connect(server.grpc_url())
        .await
        .expect("Failed to connect to server"));

    println!("\nðŸš€ TEST-001: Basic CRUD Operations\n");

    // CREATE - Only method that exists and works
    let store = client
        .create_policy_store(Some("Test Store".to_string()))
        .await
        .expect("Failed to create store");
    println!("  âœ“ Created: {}", store.policy_store_id);

    // READ - Only method that exists
    let details = client
        .get_policy_store(&store.policy_store_id)
        .await
        .expect("Failed to get store");
    println!("  âœ“ Retrieved: {:?}", details.description);

    // LIST - Method that exists
    let list = client
        .list_policy_stores(Some(10), None)
        .await
        .expect("Failed to list stores");
    println!("  âœ“ Listed {} stores", list.policy_stores.len());

    println!("\nâœ… TEST-001: PASSED!\n");
}

#[tokio::test]
#[ignore]
async fn test_002_multiple_stores() {
    let docker = Cli::default();
    let server = ServerContainer::start(&docker).await;
    let client = Arc::new(hodei_permissions_sdk::AuthorizationClient::connect(server.grpc_url())
        .await
        .expect("Failed to connect"));

    println!("\nðŸš€ TEST-002: Multiple Stores\n");

    let num_stores = 3;
    let mut store_ids = Vec::new();

    for i in 0..num_stores {
        let store = client
            .create_policy_store(Some(format!("Store {}", i)))
            .await
            .expect("Failed to create store");
        let store_id = store.policy_store_id.clone();
        store_ids.push(store_id);
        println!("  âœ“ Created store {}: {}", i, store.policy_store_id);
    }

    // Verify all exist
    let list = client
        .list_policy_stores(Some(100), None)
        .await
        .expect("Failed to list");
    assert_eq!(list.policy_stores.len(), num_stores);
    println!("  âœ“ Verified {} stores exist", list.policy_stores.len());

    println!("\nâœ… TEST-002: PASSED!\n");
}

#[tokio::test]
#[ignore]
async fn test_003_authorization() {
    let docker = Cli::default();
    let server = ServerContainer::start(&docker).await;
    let client = Arc::new(hodei_permissions_sdk::AuthorizationClient::connect(server.grpc_url())
        .await
        .expect("Failed to connect"));

    println!("\nðŸš€ TEST-003: Authorization\n");

    let store = client
        .create_policy_store(Some("Auth Test".to_string()))
        .await
        .expect("Failed to create store");

    // Test authorization (uses simple method)
    let response = client
        .is_authorized(&store.policy_store_id, "User::alice", "Action::view", "Resource::doc1")
        .await
        .expect("Auth failed");

    println!("  âœ“ Authorization decision: {}", response.decision);
    assert!(response.decision == "ALLOW" || response.decision == "DENY");

    println!("\nâœ… TEST-003: PASSED!\n");
}
